pages/debug: add placeholder

--- a/assets/l10n/uk.arb
+++ b/assets/l10n/uk.arb
@@ -4,6 +4,7 @@
     "navigationLocomotive": "Локомотив",
     "navigationAccessories": "Аксесуари",
     "navigationCV": "CV",
+    "cvInProgress": "Розділ в розробці...",
 
     "launchStatusInitializing": "Ініціалізація",
     "launchStatusChecking": "Перевірка підʼєднанного Wi-Fi",
